http://www.springframework.org/osgi

Changes in version 2.0.0 M1 (2009-mm-dd)
----------------------------------------

General
* JDK 5.0 required for both building and running; for JDK 1.4 support use 1.2.x branch
* upgraded to Spring Framework 3.0
* upgraded to Equinox 3.4.3
* upgraded to Knopflerfish 2.3.0
* generified classes (both public and internal)
* the archetype project now saves locally the manifest generated during packaging

Package org.springframework.osgi.bundle
* deprecated BundleAction in favour of the BundleActionEnum enum 

Package org.springframework.osgi.context
* improved serviceability by using NamedThreadLocal

Package org.springframework.osgi.compendium
* enhanced cm-properties to reflect Config Admin changes in the returned Properties object
* added new custom destruction callback to managed service factory objects

Package org.springframework.osgi.extender
* added JavaBean cache initialization for known types to reduce the number of class lookups

Package org.springframework.osgi.service
* improved serviceability by using NamedInheritableThreadLocal
* introduced support for dynamic service properties
* introduced InterfaceDetector for custom auto export scenarios
* deprecated AutoExport in favour of the DefaultInterfaceDetector enum
* deprecated Cardinality class in favour of the Availability enum

Package org.springframework.osgi.mock
* added OSGi 4.2 methods to the package

Package org.springframework.osgi.util
* improved fallback mechanism for OSGi r4.1 features running in OSGi r4.0 platforms


Changes in version 1.2.0 final (2009-04-09)
-------------------------------------------

General
* improved web-console sample (added more documentation and bundles from the SpringSource Enterprise
Bundle Repository)
* updated archetype to support both Bundlor and Felix Bundle plugin
* increased Spring import range up to version 4

Package org.springframework.osgi.config