@@ -258,6 +258,16 @@
                       	]]></xsd:documentation>
                       </xsd:annotation>
                 </xsd:attribute>
+                <xsd:attribute name="sticky" type="xsd:boolean" default="false">
+                	<xsd:annotation>
+                		<xsd:documentation><![CDATA[
+    Defines whether the backing service should be changed if a 'better' OSGi service becomes
+    available. If 'false', the proxy will rebind only if the backing service is no longer available. 
+    If 'true', the rebind will occur every time a 'better' candidate appears. A better service is
+    defined by having either a higher ranking or the same ranking and a lower service id.
+                		]]></xsd:documentation>
+                	</xsd:annotation>
+                </xsd:attribute>
             </xsd:extension>
         </xsd:complexContent>
    </xsd:complexType>
